linux-2.6 (2.6.13+2.6.14c5-0experimental.1) experimental; urgency=low

  [ Sven Luther ]
  * Upgraded to 2.6.14-rc5.

 -- Sven Luther <luther@debian.org>  Fri, 21 Oct 2005 18:40:40 +0000

linux-2.6 (2.6.13+2.6.14-rc4-0experimental.1) experimental; urgency=low

  [ Sven Luther ]
  * Upgrade to 2.6.14-rc4.

  [ Simon Horman ]
  * Fix genearation of .extraversion (closes: #333842)

  [ dann frazier ]
  * Enhance the linux-source description to explain the types of patches
    Debian adds to it.  (closes: #258043)
  * Correct linux-patch-debian description.  It replaces the
    kernel-patch-debian packages, not the kernel-source packages.

  [ Jonas Smedegaard ]
  * Fix building from within a very long dir (all patches was applied at
    once - exhausting shell commandline, now applied one by one).
  * Add Simon Horman, Sven Luther and myself as Uploaders.

  [ Bastian Blank ]
  * Use list of revisions in patch scripts.
  * Use correct names for tarball and scripts.

 -- Bastian Blank <waldi@debian.org>  Fri, 21 Oct 2005 12:17:47 +0000

linux-2.6 (2.6.13-2) UNRELEASED; urgency=low

  [ Jurij Smakov ]
  * [i386] Set the CONFIG_HPET_EMULATE_RTC option to make the clock
    work properly on certain Dell machines. This required setting the
    CONFIG_RTC option to 'y' instead of 'm'. (closes: #309909)
    [i386] Enable VIDEO_CX88 and VIDEO_CX88_DVB (both set to 'm') by
    popular demand. (closes: #330916)

  [ Norbert Tretkowski ]
  * [alpha] Update arch/alpha/config for 2.6.13

  [ Kyle McMartin ]
  * [hppa] Oops. Fix linux-headers not including asm-parisc by adding
    headers_dirs = parisc to Makefile.inc.

  [ maximilian attems ]
  * Set CONFIG_FB_VESA=y for i386 and amd64 configs. (closes: #333003)

  [ Sven Luther ]
  * [powerpc] Fixed apus build, now use mkvmlinuz too to generate the vmlinuz
    kernel.
  * Fixed control.image.in to depend on :
      initramfs-tools | yaird | linux-ramdisk-tool
    where linux-ramdisk-tools is the virtual package provided by all