@@ -32,10 +32,10 @@ debhelper_post() {
 # to linux-headers-$(subarch)-$(version)-$(abiname),
 # not just linux-headers-$(version)-$(abiname).
 #
-prefix=$DEBIAN_VERSION-$DEBIAN_ABINAME
-pkg=linux-headers-$prefix-$DEBIAN_FLAVOUR
-top=$PWD/debian/$pkg
-dir=$top/usr/src/$pkg
+prefix="$DEBIAN_VERSION-$DEBIAN_ABINAME"
+pkg="linux-headers-$prefix-$DEBIAN_FLAVOUR"
+top="$PWD/debian/$pkg"
+dir="$top/usr/src/$pkg"
 #
 # Here we need to find the kernel architecture which
 # is appropriate for the current flavour. It is available
@@ -45,23 +45,23 @@ dir=$top/usr/src/$pkg
 # Currently we just use the fact that in the build directory
 # the symlink include/asm must point to include/asm-${arch}
 #
-arch=$(readlink include/asm)
-arch=$(basename "${arch}")
+arch="$(readlink include/asm)"
+arch="$(basename "${arch}")"
 arch="${arch#asm-}"
 
-debhelper_pre $pkg
+debhelper_pre "$pkg"
 
 #
 # Stuff below is ugly as hell, but does the trick so I'm not
 # touching it until we can invent something better.
 #
-mkdir -p $dir/arch/$arch/kernel
-mkdir -p $dir/include/asm-$arch
-mkdir -p $dir/include/linux
-cp -a .config $dir
-echo $DEBIAN_VERSION-$DEBIAN_ABINAME-$DEBIAN_FLAVOUR > $dir/.extraversion
+mkdir -p "$dir/arch/$arch/kernel"
+mkdir -p "$dir/include/asm-$arch"
+mkdir -p "$dir/include/linux"
+cp -a .config "$dir"
+echo "$DEBIAN_VERSION-$DEBIAN_ABINAME-$DEBIAN_FLAVOUR" > "$dir/.extraversion"
 
-cp -a Module.symvers $dir
+cp -a Module.symvers "$dir"
 
 find . -mindepth 1 -maxdepth 1 \
 	! -name debian -a ! -name Documentation -a ! -name include -a \
@@ -70,33 +70,33 @@ find . -mindepth 1 -maxdepth 1 \
 	-printf "../linux-headers-$prefix/%f\n" |
 	xargs ln -s --target-directory="$dir"
 
-find arch/$arch -mindepth 1 -maxdepth 1 \( \
+find "arch/$arch" -mindepth 1 -maxdepth 1 \( \
 	-type d -a ! -name kernel -o \
 	-type f -a \( -name 'Makefile*' -o -name 'Kconfig*' \) \) \
 	-printf "../../../linux-headers-$prefix/%p\n" |
-	xargs ln -s --target-directory=$dir/arch/$arch
-[ -f arch/$arch/kernel/asm-offsets.s ] && ln -f arch/$arch/kernel/asm-offsets.s $dir/arch/$arch/kernel
-ln -s ../../../../linux-headers-$prefix/arch/$arch/kernel/Makefile $dir/arch/$arch/kernel
+	xargs ln -s --target-directory="$dir/arch/$arch"
+[ -f "arch/$arch/kernel/asm-offsets.s" ] && ln -f "arch/$arch/kernel/asm-offsets.s" "$dir/arch/$arch/kernel"
+ln -s "../../../../linux-headers-$prefix/arch/$arch/kernel/Makefile" "$dir/arch/$arch/kernel"
 find include -mindepth 1 -maxdepth 1 \
 	! -name config -a ! -name linux -a ! -name 'asm-*' \
 	-printf "../../linux-headers-$prefix/%p\n" |
-	xargs ln -s --target-directory=$dir/include
-cp -a include/config $dir/include
-ln -sf asm-${arch} $dir/include/asm
-find include/asm-$arch -mindepth 1 -maxdepth 1 \
+	xargs ln -s --target-directory="$dir/include"
+cp -a include/config "$dir/include"
+ln -sf "asm-${arch}" "$dir/include/asm"
+find "include/asm-$arch" -mindepth 1 -maxdepth 1 \
 	\( -type f -a ! -links 2 -o ! -type f \) \
 	-printf "../../../linux-headers-$prefix/%p\n" |
-	xargs --no-run-if-empty ln -s --target-directory=$dir/include/asm-$arch
-find include/asm-$arch -mindepth 1 -maxdepth 1 \
+	xargs --no-run-if-empty ln -s --target-directory="$dir/include/asm-$arch"
+find "include/asm-$arch" -mindepth 1 -maxdepth 1 \
 	-type f -links 2 |
-	xargs --no-run-if-empty ln -f --target-directory=$dir/include/asm-$arch
+	xargs --no-run-if-empty ln -f --target-directory="$dir/include/asm-$arch"
 for i in include/asm-*
 do
   case ${i#include/asm-} in
     $arch)
       ;;
     generic | @headers_dirs@)
-      ln -s ../../linux-headers-$prefix/$i $dir/$i
+      ln -s "../../linux-headers-$prefix/$i" "$dir/$i"
       ;;
     *)
       ;;
@@ -105,27 +105,27 @@ done
 find include/linux -mindepth 1 -maxdepth 1 \
 	! -name autoconf.h -a ! -name compile.h -a ! -name version.h \
 	-printf "../../../linux-headers-$prefix/%p\n" |
-	xargs ln -s --target-directory=$dir/include/linux
+	xargs ln -s --target-directory="$dir/include/linux"
 cp -a include/linux/autoconf.h include/linux/compile.h \
-	include/linux/version.h $dir/include/linux
+	include/linux/version.h "$dir/include/linux"
 
-mkdir -p $top/lib/modules/$version
-ln -s /usr/src/linux-headers-$version $top/lib/modules/$version/build
+mkdir -p "$top/lib/modules/$version"
+ln -s "/usr/src/linux-headers-$version" "$top/lib/modules/$version/build"
 
-mkdir -p $dir/scripts
-cp scripts/Makefile* $dir/scripts
+mkdir -p "$dir/scripts"
+cp scripts/Makefile* "$dir/scripts"
 for i in $(find scripts -type f -perm +111 -o -name "*.sh" -o -name "*.pl"); do
-  mkdir -p $dir/$(dirname $i)
-  cp $i $dir/$i
+  mkdir -p "$dir/$(dirname $i)"
+  cp "$i" "$dir/$i"
 done
 
-debhelper_post $pkg
+debhelper_post "$pkg"
 
 #
 # Check whether we should force any modules to be available
 # on the initrd.
 #
-cd ${IMAGE_TOP}/lib/modules/${version}
+cd "${IMAGE_TOP}/lib/modules/${version}"
 modules='@initrd_modules@'
 if [ -n "${modules}" ]; then
   mkdir initrd
