@@ -3,7 +3,11 @@ linux-2.6 (2.6.13+2.6.14c5-0experimental.1) experimental; urgency=low
   [ Sven Luther ]
   * Upgraded to 2.6.14-rc5.
 
- -- Sven Luther <luther@debian.org>  Fri, 21 Oct 2005 18:40:40 +0000
+  [ Jonas Smedegaard ]
+  * Quote variables in debian/rules.real and postinstall (making it
+    safer to run with weird characters in path of build environment).
+
+ -- Jonas Smedegaard <dr@jones.dk>  Fri, 21 Oct 2005 21:01:12 +0200
 
 linux-2.6 (2.6.13+2.6.14-rc4-0experimental.1) experimental; urgency=low
 
